Reworking website for compatibility with old permalinks, which are all going to be flowing in...

--- a/_layouts/subpage.html
+++ b/_layouts/subpage.html
@@ -4,7 +4,7 @@
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width = 750">
-    <link rel="stylesheet" type="text/css" href="css/stylesheet.css" charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="../css/stylesheet.css" charset="utf-8">
     <title>{{ page.title }}</title>
   </head>
   <body id="intro">
@@ -15,13 +15,13 @@
       <div id="navigation">
         <ul>
           <li id="navi_intro">
-            <a href="index.html">Intro</a>
+            <a href="../index.html">Intro</a>
           </li>
           <li id="navi_intro">
-            <a href="screenshots/">Screenshots</a>
+            <a href="../screenshots/">Screenshots</a>
           </li>
           <li id="navi_intro">
-            <a href="changelog/">Changelog</a>
+            <a href="../changelog/">Changelog</a>
           </li>
           <li id="navi_intro">
             <a href="http://github.com/eglaysher/vitaminsee">Source</a>
