--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,18 @@
     <meta name="viewport" content="width = 750">
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css" charset="utf-8">
     <title>{{ page.title }}</title>
+
+<!-- Google +1 button -->
+<script>
+  (function(d, t, g, s){
+    g = d.createElement(t),
+    s = d.getElementsByTagName(t)[0];
+    g.async = true;
+    g.src = 'https://apis.google.com/js/plusone.js';
+    s.parentNode.insertBefore(g, s);
+  })(document, 'script');
+</script>
+
   </head>
   <body id="intro">
     <div id="wrapper">
